ODP-4573: Hnadling import package issues